# Foundry

./: .gitignore  README.md  pyproject.toml  requirements-dev.lock.txt  requirements-realization.in  requirements-realization.lock.txt  requirements-smoke.lock.txt  requirements-training.lock.txt
configs/eval/: gsm1k_qwen2_5_1_5b_final_evaluator.yaml  gsm1k_qwen2_5_1_5b_format_v1.yaml  gsm1k_qwen2_5_1_5b_format_v2.yaml  gsm1k_qwen2_5_1_5b_smoke.yaml
configs/phase2/: mathqa_base_evaluation.json  vetted_corpus_base_evaluation.json
configs/synthesis/: gsm1k_phase1.yaml  gsm1k_phase1_smoke.yaml  gsm1k_phase1_smoke_v2.yaml  internal_diversity_candidates_v1.yaml  internal_diversity_v1.yaml  local_realization_compact_micro.yaml  local_realization_design.yaml  local_realization_smoke.yaml  local_realization_stronger_model_micro.yaml  matched_signal_dataset.yaml  matched_signal_schedule.json  matched_template_signal.yaml  semantic_all_minilm_l6_v2.yaml  signal_pilot.yaml  signal_pilot_attempt_pool_candidates.yaml  (+16 more)
docs/: ARCHITECTURE.md  DATA_PROVENANCE.md  DECISIONS.md  DEVLOG.md  LEARNING_NOTES.md  LOCAL_MODEL_REALIZATION_DESIGN.md  MILESTONE_INDEX.md  ONE_SEED_SIGNAL_RESULT.md  PHASE1_FINAL_REPORT.md  PHASE2_RESEARCH_DIRECTIONS.md  PHASE2_VETTED_CORPUS_RESULT.md  PROJECT_PLAN.md  REPRODUCIBILITY.md  SYNTHETIC_DATA_DESIGN.md  TEMPLATE_BANK_DESIGN.md  VERIFIER_GRPO_RESULT.md
experiments/: EXPERIMENTS.md
results/: phase1_evidence_consistency.csv  phase1_experiment_timeline.csv  phase1_figure_data.json  phase1_summary.json
scripts/: render_phase1_figures.py
(+499 files in other folders)
